fixed tests, refactoring